# pharmaide

./: .gitignore  diff.txt  index.html  package-lock.json  package.json  replace_internal_css.cjs  vite.config.ts
backend/: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f6b2a9c8e31_add_treatment_conversation_modes.py  2f5f3fb9f1a7_add_treatment_analyses.py  4a9c2f6e8b1d_add_conversation_messages.py  503b50094423_initial_schema.py  5d3a7b9c1e24_add_conversation_message_processed_at.py  6e8a1c4b2d9f_add_triage_items.py  7c8d9e0f1a2b_add_treatment_archived_at.py  8c2a1e3b9d44_clock_timestamp_for_created_at.py  9b1d4e7c2a6f_add_knowledge_base_tables.py  9d4a6f2b8c13_add_medication_discontinued_at.py  a1f4c9d2e7b0_add_patient_allergies.py  (+5 more)
backend/app/: config.py  errors.py  graph.py  logging_setup.py  main.py
backend/tests/: conftest.py  test_adherence_events.py  test_analysis_graph.py  test_analysis_schemas.py  test_analysis_service.py  test_audits_api.py  test_check_interactions.py  test_chunker.py  test_clinical_safety_review.py  test_config.py  test_conversation_messages.py  test_conversation_turns_api.py  test_cors.py  test_course_completion.py  test_course_completion_report.py  test_dailymed_cache.py  test_db_fixture.py  test_debug_graph_route.py  test_embeddings.py  test_extraction_agent.py  test_extraction_schemas.py  test_generate_schedule.py  test_global_exception_handler.py  test_graph.py  test_ground_medications.py  test_health.py  test_image_guard.py  test_internal_analysis_worker.py  test_internal_cleanup.py  test_internal_message_delivery.py  test_internal_monitoring.py  test_internal_patient_message_buffer.py  test_kb_ingestion.py  test_kb_parsers.py  test_kb_reranker.py  test_kb_retrieval.py  test_kb_segments.py  test_knowledge_api.py  test_knowledge_schema.py  test_knowledge_sources.py  (+38 more)
src/: App.tsx  (+4 more)
(+125 files in other folders)
