[project]
name = "pharmaide-backend"
version = "0.1.0"
description = "PharmaAide HITL medication adherence backend (FastAPI + LangGraph)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.38",
    "pydantic>=2.11",
    "pydantic-ai>=1.91",
    "pydantic-settings>=2.7",
    "pydantic-extra-types>=2.10",
    "phonenumbers>=8.13",
    "openai>=2.36",
    "httpx>=0.28",
    "tenacity>=9.1",
    "langgraph>=0.2.65",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "structlog>=25.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "sqlalchemy-cockroachdb>=2.0.2",
    "pypdfium2>=5.0",
    "pillow>=11.0",
    "python-multipart>=0.0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "testcontainers[postgres]>=4.9",
    "asyncpg-stubs>=0.30",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-native
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
# testcontainers ships without py.typed; only used in tests.
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra"
markers = [
    "live_llm: manual tests that call a real LLM provider; skipped unless explicitly enabled",
]
